--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -1043,5 +1043,6 @@
   "applied_commitment": "Εφαρμοσμένη δέσμευση",
   "toggle_commitment_mode": "Εναλλαγή εδώ μεταξύ προσθήκης και ανάκλησης της δέσμευσης εξόρυξης",
   "success_set_commitment": "Ενημερώθηκε με επιτυχία η δέσμευσή σας για εξόρυξη",
-  "error_set_commitment": "Σφάλμα κατά την ενημέρωση της δέσμευσης εξόρυξης. Λάβετε υπόψη ότι πρέπει να περιμένετε 1440 τετράγωνα για να μπορέσετε να ανακαλέσετε τη δέσμευσή σας."
+  "error_set_commitment": "Σφάλμα κατά την ενημέρωση της δέσμευσης εξόρυξης. Λάβετε υπόψη ότι πρέπει να περιμένετε 1440 τετράγωνα για να μπορέσετε να ανακαλέσετε τη δέσμευσή σας.",
+  "commitment_blocks_enabled": "λείπουν μπλοκ μέχρι να ανακληθεί η δέσμευση"
 }
