--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -1043,5 +1043,6 @@
   "applied_commitment": "लागू की गई प्रतिबद्धता",
   "toggle_commitment_mode": "खनन प्रतिबद्धता को जोड़ने और रद्द करने के बीच यहां टॉगल करें",
   "success_set_commitment": "सफलतापूर्वक अपनी खनन प्रतिबद्धता को अद्यतन किया",
-  "error_set_commitment": "खनन प्रतिबद्धता को अपडेट करते समय त्रुटि। मन कि आप अपनी प्रतिबद्धता को रद्द कर सकते हैं इससे पहले कि आप 1440 ब्लॉक इंतजार करने की जरूरत है।"
+  "error_set_commitment": "खनन प्रतिबद्धता को अपडेट करते समय त्रुटि। मन कि आप अपनी प्रतिबद्धता को रद्द कर सकते हैं इससे पहले कि आप 1440 ब्लॉक इंतजार करने की जरूरत है।",
+  "commitment_blocks_enabled": "जब तक प्रतिबद्धता को रद्द नहीं किया जा सकता तब तक ब्लॉक"
 }
