--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -1043,5 +1043,6 @@
   "applied_commitment": "適用されたコミットメント",
   "toggle_commitment_mode": "ここで、マイニングコミットメントの追加と取り消しを切り替えます",
   "success_set_commitment": "マイニングコミットメントを正常に更新しました",
-  "error_set_commitment": "マイニングコミットメントの更新中にエラーが発生しました。コミットメントを取り消すには、1440ブロック待つ必要があることに注意してください。"
+  "error_set_commitment": "マイニングコミットメントの更新中にエラーが発生しました。コミットメントを取り消すには、1440ブロック待つ必要があることに注意してください。",
+  "commitment_blocks_enabled": "コミットメントを取り消すことができるまでブロックが欠落している"
 }
