--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -1043,5 +1043,6 @@
   "applied_commitment": "Прикладное обязательство",
   "toggle_commitment_mode": "Переключайтесь между добавлением и отменой обязательства по майнингу",
   "success_set_commitment": "Успешно обновлено ваше обязательство по добыче полезных ископаемых",
-  "error_set_commitment": "Ошибка при обновлении обязательств по добыче полезных ископаемых. Имейте в виду, что вам нужно подождать 1440 блоков, прежде чем вы сможете отозвать свое обязательство."
+  "error_set_commitment": "Ошибка при обновлении обязательств по добыче полезных ископаемых. Имейте в виду, что вам нужно подождать 1440 блоков, прежде чем вы сможете отозвать свое обязательство.",
+  "commitment_blocks_enabled": "блоки отсутствуют, пока обязательство не может быть отозвано"
 }
