--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -1043,5 +1043,6 @@
   "applied_commitment": "Приложен ангажимент",
   "toggle_commitment_mode": "Превключете тук между добавяне и отмяна на ангажимента за копаене",
   "success_set_commitment": "Успешно актуализиран ангажимент за добив",
-  "error_set_commitment": "Грешка при актуализиране на ангажимента за добив. Имайте предвид, че трябва да изчакате 1440 блока, преди да можете да оттеглите ангажимента си."
+  "error_set_commitment": "Грешка при актуализиране на ангажимента за добив. Имайте предвид, че трябва да изчакате 1440 блока, преди да можете да оттеглите ангажимента си.",
+  "commitment_blocks_enabled": "блокира липсващи, докато ангажиментът може да бъде отменен"
 }
