--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -1043,5 +1043,6 @@
   "applied_commitment": "Compromiso aplicado",
   "toggle_commitment_mode": "Alternar aquí entre agregar y revocar el compromiso de minería",
   "success_set_commitment": "Actualizó con éxito su compromiso de minería",
-  "error_set_commitment": "Error al actualizar el compromiso de minería. Tenga en cuenta que debe esperar 1440 bloques antes de poder revocar su compromiso."
+  "error_set_commitment": "Error al actualizar el compromiso de minería. Tenga en cuenta que debe esperar 1440 bloques antes de poder revocar su compromiso.",
+  "commitment_blocks_enabled": "faltan bloques hasta que se pueda revocar el compromiso"
 }
