--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -1043,5 +1043,6 @@
   "applied_commitment": "Примењена обавеза",
   "toggle_commitment_mode": "Овде се пребацујте између додавања и опозивања рударске обавезе",
   "success_set_commitment": "Успешно сте ажурирали обавезу рударства",
-  "error_set_commitment": "Грешка приликом ажурирања обавезе о рударству. Имајте на уму да требате сачекати 1440 блокова да бисте могли опозвати своју обавезу."
+  "error_set_commitment": "Грешка приликом ажурирања обавезе о рударству. Имајте на уму да требате сачекати 1440 блокова да бисте могли опозвати своју обавезу.",
+  "commitment_blocks_enabled": "недостају блокови док се не може опозвати обавеза"
 }
