--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -1043,5 +1043,6 @@
   "applied_commitment": "Застосовувані зобов’язання",
   "toggle_commitment_mode": "Переключіться тут між додаванням та скасуванням зобов’язання щодо майнінгу",
   "success_set_commitment": "Успішно оновлено ваше зобов'язання щодо видобутку корисних копалин",
-  "error_set_commitment": "Помилка під час оновлення зобов’язання щодо майнінгу. Пам’ятайте, що вам потрібно почекати 1440 блоків, перш ніж ви зможете скасувати своє зобов’язання."
+  "error_set_commitment": "Помилка під час оновлення зобов’язання щодо майнінгу. Пам’ятайте, що вам потрібно почекати 1440 блоків, перш ніж ви зможете скасувати своє зобов’язання.",
+  "commitment_blocks_enabled": "відсутні блоки, поки зобов’язання не може бути скасовано"
 }
