--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -1043,5 +1043,6 @@
   "applied_commitment": "应用承诺",
   "toggle_commitment_mode": "在添加和撤销采矿承诺之间切换",
   "success_set_commitment": "成功更新您的采矿承诺",
-  "error_set_commitment": "更新挖矿承诺时出错。请注意，您需要等待1440块才能撤消承诺。"
+  "error_set_commitment": "更新挖矿承诺时出错。请注意，您需要等待1440块才能撤消承诺。",
+  "commitment_blocks_enabled": "直到承诺可以被取消之前，缺少的块"
 }
