feat: check V3 version for commitment

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -1045,5 +1045,6 @@
   "success_set_commitment": "Успешно актуализиран ангажимент за добив",
   "error_set_commitment": "Грешка при актуализиране на ангажимента за добив. Имайте предвид, че трябва да изчакате 1440 блока, преди да можете да оттеглите ангажимента си.",
   "commitment_blocks_enabled": "блокира липсващи, докато ангажиментът може да бъде отменен",
-  "no_reward_recipient": "Все още нямате настроен получател на награда"
+  "no_reward_recipient": "Все още нямате настроен получател на награда",
+  "commitment_unsupported": "Понастоящем избраният възел не поддържа задължение за копаене. Моля, изберете възел с поне версия 3+."
 }
