--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -1045,5 +1045,6 @@
   "success_set_commitment": "Úspěšně aktualizován váš závazek k těžbě",
   "error_set_commitment": "Chyba při aktualizaci závazku těžby. Mějte na paměti, že než budete moci svůj závazek odvolat, musíte počkat 1440 bloků.",
   "commitment_blocks_enabled": "bloky chybí do odvolání závazku",
-  "no_reward_recipient": "Zatím nemáte nastaveného žádného příjemce odměny"
+  "no_reward_recipient": "Zatím nemáte nastaveného žádného příjemce odměny",
+  "commitment_unsupported": "Aktuálně vybraný uzel nepodporuje těžební závazek. Vyberte uzel alespoň s verzí 3+."
 }
