--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -1045,5 +1045,6 @@
   "success_set_commitment": "Ενημερώθηκε με επιτυχία η δέσμευσή σας για εξόρυξη",
   "error_set_commitment": "Σφάλμα κατά την ενημέρωση της δέσμευσης εξόρυξης. Λάβετε υπόψη ότι πρέπει να περιμένετε 1440 τετράγωνα για να μπορέσετε να ανακαλέσετε τη δέσμευσή σας.",
   "commitment_blocks_enabled": "λείπουν μπλοκ μέχρι να ανακληθεί η δέσμευση",
-  "no_reward_recipient": "Δεν έχετε ακόμη σύνολο παραληπτών ανταμοιβής"
+  "no_reward_recipient": "Δεν έχετε ακόμη σύνολο παραληπτών ανταμοιβής",
+  "commitment_unsupported": "Ο τρέχων επιλεγμένος κόμβος δεν υποστηρίζει Mining Commitment. Επιλέξτε έναν κόμβο με τουλάχιστον έκδοση 3+."
 }
