--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -1045,5 +1045,6 @@
   "success_set_commitment": "マイニングコミットメントを正常に更新しました",
   "error_set_commitment": "マイニングコミットメントの更新中にエラーが発生しました。コミットメントを取り消すには、1440ブロック待つ必要があることに注意してください。",
   "commitment_blocks_enabled": "コミットメントを取り消すことができるまでブロックが欠落している",
-  "no_reward_recipient": "報酬の受取人はまだ設定されていません"
+  "no_reward_recipient": "報酬の受取人はまだ設定されていません",
+  "commitment_unsupported": "現在選択されているノードは、マイニングコミットメントをサポートしていません。バージョン3以降のノードを選択してください。"
 }
