--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -1045,5 +1045,6 @@
   "success_set_commitment": "Sėkmingai atnaujinote įsipareigojimą kasybos srityje",
   "error_set_commitment": "Atnaujinant kasybos įsipareigojimą įvyko klaida. Atminkite, kad jums reikia palaukti 1440 blokų, kad galėtumėte atšaukti savo įsipareigojimą.",
   "commitment_blocks_enabled": "blokų trūksta, kol nebus galima atšaukti įsipareigojimų",
-  "no_reward_recipient": "Jūs dar nenustatėte premijos gavėjo"
+  "no_reward_recipient": "Jūs dar nenustatėte premijos gavėjo",
+  "commitment_unsupported": "Šiuo metu pasirinktas mazgas nepalaiko Kasybos įsipareigojimų. Pasirinkite mazgą, kurio versija yra bent 3+."
 }
