--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -1045,5 +1045,6 @@
   "success_set_commitment": "Uw mijnverplichting succesvol bijgewerkt",
   "error_set_commitment": "Fout bij het bijwerken van mijnverplichting. Houd er rekening mee dat u 1440 blokken moet wachten voordat u uw toezegging kunt herroepen.",
   "commitment_blocks_enabled": "blokken ontbreken totdat de toezegging kan worden herroepen",
-  "no_reward_recipient": "U heeft nog geen beloningsontvanger ingesteld"
+  "no_reward_recipient": "U heeft nog geen beloningsontvanger ingesteld",
+  "commitment_unsupported": "Het momenteel geselecteerde knooppunt ondersteunt geen mijnbouwverplichting. Selecteer een knooppunt met ten minste versie 3+."
 }
