--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -1045,5 +1045,6 @@
   "success_set_commitment": "Успешно обновлено ваше обязательство по добыче полезных ископаемых",
   "error_set_commitment": "Ошибка при обновлении обязательств по добыче полезных ископаемых. Имейте в виду, что вам нужно подождать 1440 блоков, прежде чем вы сможете отозвать свое обязательство.",
   "commitment_blocks_enabled": "блоки отсутствуют, пока обязательство не может быть отозвано",
-  "no_reward_recipient": "У вас еще нет получателя вознаграждения"
+  "no_reward_recipient": "У вас еще нет получателя вознаграждения",
+  "commitment_unsupported": "Текущий выбранный узел не поддерживает обязательства по майнингу. Выберите узел как минимум с версией 3+."
 }
