--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -1060,5 +1060,6 @@
   "success_set_commitment": "Успешно сте ажурирали обавезу рударства",
   "error_set_commitment": "Грешка приликом ажурирања обавезе о рударству. Имајте на уму да требате сачекати 1440 блокова да бисте могли опозвати своју обавезу.",
   "commitment_blocks_enabled": "недостају блокови док се не може опозвати обавеза",
-  "no_reward_recipient": "Још увек нисте поставили примаоца награде"
+  "no_reward_recipient": "Још увек нисте поставили примаоца награде",
+  "commitment_unsupported": "Тренутно изабрани чвор не подржава обавезу рударства. Изаберите чвор са најмање верзијом 3+."
 }
