--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -1045,5 +1045,6 @@
   "success_set_commitment": "Успішно оновлено ваше зобов'язання щодо видобутку корисних копалин",
   "error_set_commitment": "Помилка під час оновлення зобов’язання щодо майнінгу. Пам’ятайте, що вам потрібно почекати 1440 блоків, перш ніж ви зможете скасувати своє зобов’язання.",
   "commitment_blocks_enabled": "відсутні блоки, поки зобов’язання не може бути скасовано",
-  "no_reward_recipient": "Ви ще не встановили одержувача винагороди"
+  "no_reward_recipient": "Ви ще не встановили одержувача винагороди",
+  "commitment_unsupported": "Наразі вибраний Вузол не підтримує зобов'язання Майнінг. Виберіть вузол із принаймні версією 3+."
 }
