--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -1058,5 +1058,6 @@
   "success_set_commitment": "Successfully updated your mining commitment",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
-  "no_reward_recipient": "You have no reward recipient set yet"
+  "no_reward_recipient": "You have no reward recipient set yet",
+  "commitment_unsupported": "The currently selected Node does not support Mining Commitment. Please select a Node with at least Version 3+."
 }
