--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -1045,5 +1045,6 @@
   "success_set_commitment": "Úspešne ste aktualizovali svoj záväzok k ťažbe",
   "error_set_commitment": "Chyba pri aktualizácii záväzku ťažby. Nezabudnite, že pred odvolaním svojho záväzku musíte počkať 1 440 blokov.",
   "commitment_blocks_enabled": "bloky chýbajú, kým nie je možné odvolať záväzok",
-  "no_reward_recipient": "Zatiaľ nemáte nastaveného žiadneho príjemcu odmeny"
+  "no_reward_recipient": "Zatiaľ nemáte nastaveného žiadneho príjemcu odmeny",
+  "commitment_unsupported": "Aktuálne vybraný uzol nepodporuje ťažobný záväzok. Vyberte uzol s minimálne verziou 3+."
 }
