chore: updated translations

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -943,7 +943,7 @@
   "to": "Към",
   "toggle_navigation": "Превключване навигация",
   "token": "Маркер",
-  "total": "Total",
+  "total": "Обща сума",
   "total_amount": "Обща сума",
   "total_available": "Обща наличност",
   "total_balance": "Общо салдо",
