--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -943,7 +943,7 @@
   "to": "Pro",
   "toggle_navigation": "Přepnout navigaci",
   "token": "Token",
-  "total": "Total",
+  "total": "Celkový",
   "total_amount": "Celková částka",
   "total_available": "Celkem k dispozici",
   "total_balance": "Celkový zůstatek",
