--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -943,7 +943,7 @@
   "to": "Να",
   "toggle_navigation": "Toggle navigation",
   "token": "Διακριτικό",
-  "total": "Total",
+  "total": "Σύνολο",
   "total_amount": "Συνολικό ποσό",
   "total_available": "Συνολικά διαθέσιμο",
   "total_balance": "Σύνολο υπολοίπου",
