--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -943,7 +943,7 @@
   "to": "Vastaanottaja",
   "toggle_navigation": "Navigointi päälle/pois",
   "token": "Tunnus",
-  "total": "Loppusumma",
+  "total": "Kaikki yhteensä",
   "total_amount": "Kokonaissumma",
   "total_available": "Saatavilla yhteensä",
   "total_balance": "Saldo yhteensä",
