--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -943,7 +943,7 @@
   "to": "À",
   "toggle_navigation": "Ouvrir/fermer le volet de navigation",
   "token": "Jeton",
-  "total": "Total",
+  "total": "Le total",
   "total_amount": "Montant total",
   "total_available": "Total disponible",
   "total_balance": "Solde total",
