--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -943,7 +943,7 @@
   "to": "To",
   "toggle_navigation": "Toggle navigation",
   "token": "Token",
-  "total": "Total",
+  "total": "संपूर्ण",
   "total_amount": "Total Amount",
   "total_available": "Total Available",
   "total_balance": "Total Balance",
