--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -952,7 +952,7 @@
   "to": "Do",
   "toggle_navigation": "Przełącz nawigację",
   "token": "Token",
-  "total": "Suma",
+  "total": "Całkowity",
   "total_amount": "Łączna suma",
   "total_available": "Łącznie dostępne",
   "total_balance": "Łączny balans",
