--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -943,7 +943,7 @@
   "to": "Кому",
   "toggle_navigation": "Переключение навигации",
   "token": "Токен",
-  "total": "Итого",
+  "total": "Общее",
   "total_amount": "Общее количество",
   "total_available": "Всего доступно",
   "total_balance": "Общий баланс",
