--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -958,7 +958,7 @@
   "to": "Prema",
   "toggle_navigation": "Prebaci Navigaciju",
   "token": "Token",
-  "total": "Ukupno",
+  "total": "Укупно",
   "total_amount": "Ukupan Iznos",
   "total_available": "Ukupno Dostupno",
   "total_balance": "Kompletan Saldo",
