--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -943,7 +943,7 @@
   "to": "Hedef",
   "toggle_navigation": "Toggle navigation",
   "token": "Token",
-  "total": "Total",
+  "total": "Toplam",
   "total_amount": "Total Amount",
   "total_available": "Total Available",
   "total_balance": "Toplam bakiye",
