--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -943,7 +943,7 @@
   "to": "到",
   "toggle_navigation": "切换导航",
   "token": "令牌",
-  "total": "总计",
+  "total": "全部的",
   "total_amount": "总数",
   "total_available": "可用总量",
   "total_balance": "总余额",
