--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -943,7 +943,7 @@
   "to": "到",
   "toggle_navigation": "切換導航",
   "token": "令牌",
-  "total": "總計",
+  "total": "全部的",
   "total_amount": "總數",
   "total_available": "可用總量",
   "total_balance": "總餘額",
